@@ -1,5 +1,10 @@
+AUX 60-madwimax.rules.udev 1262 RMD160 15afad80a32c77215f803189d8600ecdbd4bf2aa SHA1 e1dfc5d8020cc336a13cc8c96400d66a7a4b24b6 SHA256 a6b3f936dd12d3c2a1e2b036c7671c45c1c096b9d8e7c26510a8c72ac9e21898
+AUX events.sh 1196 RMD160 d628675d11342950458b0e71f6876020de0a4189 SHA1 275bf70b1a8320c8a1118c07eccb839b9ba554b1 SHA256 04b9f49d006e9dfcac80ef78a955fe4e92aebec86d42511c9c286812bd6e44c0
 AUX madwimax-0.1.1-led.patch 763 RMD160 0633266eb8a58807b6adfcbc3343f1aded80cc49 SHA1 22ab0861ab956a2d1153bc24be79d1f8ad71a503 SHA256 997e01d10ed822431e1ef1482fcc8ca630a47dd7b46752c537c632612a126805
+AUX madwimax.confd 16 RMD160 fbb23e7f9b6a8b1c5160d67788cda0203c1e23d5 SHA1 aed32c131777c410146ff9b867bb8d38be2df874 SHA256 e89d031e203a4811bc2465fff637682e38d12be25f78e433cf2845c53d1cd10e
+AUX madwimax.initd 689 RMD160 988d3f348025f4d8c7b440224fd9d67bdd76ece4 SHA1 59177ac15ae45b4abd9d270070762de2d883f3aa SHA256 ff59e3ba055570eb4e320234f7de29e2fd3ee7ddfb8502c4b71d9c2cfd6815b5
 DIST madwimax-0.1.1.tar.gz 145526 RMD160 4a3446d52041d3416b414f9d0fe12151b61a3262 SHA1 a6855bfe0d6e98518068bde7e7da3142e57c806c SHA256 17ac297934654663586df837dcff2bd6d3bbabddd76efdffa26713b07e08ad5f
-EBUILD madwimax-0.1.1-r1.ebuild 1066 RMD160 f967f55b1123db07d92f8c5865fc550e45cce190 SHA1 e35b0021df77ab4a533d3bc7cbb89bb86fb96e31 SHA256 7d14d3d83871ed1855c06e67c514475288d517051f387cb364f426f7da2df863
-MISC ChangeLog 307 RMD160 8a7a899eeacd032098218f0451ff967538fe34f5 SHA1 f5a9aa9c288240481fe6131f0b23699f3916f436 SHA256 a46a9f487cb024997f689bee01a6cc9431dd9083101590a2d8101c9e57cb7918
+EBUILD madwimax-0.1.1-r1.ebuild 1065 RMD160 08ed215c4ef1b1250fb9a49f1b78b61d84ed3bc0 SHA1 3461875443a37a33f0337ad8c319f6a2ad5e8210 SHA256 06f2d7819afd2e907a3779a88004fbc833b344bd8e8da7de773541b498e6bd52
+EBUILD madwimax-0.1.1-r10.ebuild 1200 RMD160 645c91e1ac2fc531796b33d424d068b819d890ec SHA1 30db6ccc71986f5e54de802a2d2592c24eaff4f6 SHA256 7d75a5cd3c1d7682b4e15b975957cf8c96226ee26363a053e14198cd93ab72c1
+MISC ChangeLog 508 RMD160 d41668b16c394113edf68ca2206b0d73e6de049e SHA1 5d44ce9713da975cad9f0dbb6983c700b20e1d32 SHA256 11650d216e3e3484d971bcae4c9a9a87e7f46a961802d056082b2a872198a534
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
