@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +files/60-madwimax.rules.udev, +madwimax-0.1.1-r10.ebuild, 
+  +files/events.sh, +files/madwimax.confd,
+  +files/madwimax.initd:
+  add new script
+
   13 Dec 2009; <slep@gentoo.org> madwimax-0.1.1-r1.ebuild:
   fix ebuild phase and keyworded to ~amd64
 
